@@ -10,6 +10,10 @@
 			to make several changes to Segue's database and file-storage structure.
 		 (<i>Adam Franco</i>)
 		
+		<li/> Bug Fix:
+	 
+			Sites now only appear once in the 'Copy Site' bar.
+		 (<i>Adam Franco</i>)
 		<li/> Change:  
 			Everyone and institute permissions are now not dropped on site-copy.
 			As well, when creating a group from an existing site, the permissions are 
